# 07_ESP32

./: README.md
00_Reference/native_ota_example/: CMakeLists.txt  sdkconfig  sdkconfig.old
00_Reference/native_ota_example/main/: native_ota_example.c
00_Reference/onoff_client/: sdkconfig
00_Reference/onoff_server/: sdkconfig
00_Reference/tcp/: sdkconfig  sdkconfig.old
00_Reference/tcp/main/: app_main.c
03_Firmware/esp32_wrover_e/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
03_Firmware/esp32_wrover_e/components/MultiButton/: CMakeLists.txt
03_Firmware/esp32_wrover_e/components/letter-shell/: shell_port.c
03_Firmware/esp32_wrover_e/components/lwrb/: CMakeLists.txt
03_Firmware/esp32_wrover_e/main/: CMakeLists.txt  main.c  main.h
03_Firmware/esp32_wrover_e/main/APP/Inc/: app_ble.h  app_key.h  app_mqtt.h  app_ota.h  app_ui.h
03_Firmware/esp32_wrover_e/main/APP/Src/: app_ble.c  app_key.c  app_mqtt.c  app_ota.c  app_ui.c
03_Firmware/esp32_wrover_e/main/BSP/Inc/: bsp_ble_driver.h  bsp_iwd_driver.h  bsp_key_driver.h  bsp_net_driver.h  bsp_nvs_driver.h  bsp_wifi_driver.h
03_Firmware/esp32_wrover_e/main/BSP/Src/: bsp_ble_driver.c  bsp_iwd_driver.c  bsp_key_driver.c  bsp_net_driver.c  bsp_nvs_driver.c  bsp_wifi_driver.c
