idf_component_register( SRCS            "main.c"
                                        "./APP/Src/app_key.c"
                                        "./APP/Src/app_ble.c"
                                        "./APP/Src/app_mqtt.c"
                                        "./APP/Src/app_ota.c"
                                        "./APP/Src/app_ui.c"
                                        "./BSP/Src/bsp_nvs_driver.c"
                                        "./BSP/Src/bsp_key_driver.c"
                                        "./BSP/Src/bsp_ble_driver.c"
                                        "./BSP/Src/bsp_wifi_driver.c"
                        INCLUDE_DIRS    ""
                                        "./APP/Inc/"
                                        "./BSP/Inc/")
